[gd_scene load_steps=4 format=3 uid="uid://cy36rr2yjswi2"]

[ext_resource type="Script" path="res://gamemodes/game_mode_2.gd" id="1_6dl0x"]
[ext_resource type="AudioStream" uid="uid://no2do0fa3igj" path="res://audio/flash.wav" id="2_jwwki"]
[ext_resource type="Texture2D" uid="uid://d0sdiiru07r84" path="res://images/flash.png" id="3_qysiw"]

[node name="GameMode2" type="Node2D"]
script = ExtResource("1_6dl0x")

[node name="FlashSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("2_jwwki")
max_polyphony = 2

[node name="FlashTexture" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qysiw")
expand_mode = 2
stretch_mode = 3
